Fixing z index of data search so autocomplete results aren't behind anything

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -94,6 +94,7 @@ span.badge {
 
 .data-search {
 	background-color: $s_blue_dk;
+	z-index: 1000;
 	position: relative;
 	color: $s_gray_lt;
         height: 300px;
